# ecohexfarm

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
.github/: FUNDING.yml
artwork/: hexbug.aseprite
src/: Makefile  colors.h  config.h  draw.c  draw.h  food.c  game.c  gameplay.h  hexbug.c  hexbug.h  hexgrid.c  hexgrid.h  minshell.html  raylib_game.c  screen_ending.c  screen_gameplay.c  screen_logo.c  screen_options.c  screen_title.c  screens.h  sellingpen.c  ui.c  ui.h  utils.c  utils.h
